--- a/app/src/main/res/layout/activity_recuperar_clave.xml
+++ b/app/src/main/res/layout/activity_recuperar_clave.xml
@@ -9,11 +9,38 @@
     android:background="@drawable/fondo"
     tools:context=".recuperar_clave">
 
+    <!-- Logo (persistente en la actividad) -->
+    <ImageView
+        android:id="@+id/iv_logo_recuperar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="48dp"
+        android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Título (persistente en la actividad) -->
+    <TextView
+        android:id="@+id/tv_titulo_recuperar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Recuperar Contraseña"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_logo_recuperar" />
+
+    <!-- Contenedor para los Fragmentos -->
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_recuperar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
