retoque del diseño v.3

--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -55,7 +55,8 @@
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                android:popupBackground="@drawable/bg_spinner_dropdown"/>
 
             <EditText
                 android:id="@+id/edtnum_doc"
