--- a/app/src/main/res/layout/spinner_item_layout.xml
+++ b/app/src/main/res/layout/spinner_item_layout.xml
@@ -2,11 +2,16 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     style="?android:attr/spinnerItemStyle"
-    android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:singleLine="true"
     android:ellipsize="marquee"
+    android:textAlignment="viewStart"
+    android:gravity="start|center_vertical"
     android:textColor="@color/white"
     android:padding="14dp"
-    android:gravity="start|center_vertical"
-    android:textAlignment="viewStart" />
+    android:background="@drawable/bg_spinner_item_option"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp" />
