--- a/app/src/main/res/layout/activity_item_pelicula.xml
+++ b/app/src/main/res/layout/activity_item_pelicula.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#4E4A7D"
             android:text="Borrar"
-            android:textColor="#FFFFFF"
+            android:textColor="#FBFBFB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
