Se ha complementado y creado la vista de peliculas, donde se muestra la creación de esta, los directores, clasificaciones, etc..

--- a/app/src/main/res/layout/activity_item_pelicula.xml
+++ b/app/src/main/res/layout/activity_item_pelicula.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="88dp"
     android:layout_margin="8dp"
-    app:cardBackgroundColor="#2F2C4C"
+    app:cardBackgroundColor="#80332D6C"
     app:cardCornerRadius="16dp"
-    app:cardElevation="4dp">
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:minHeight="72dp"
         android:padding="16dp">
 
@@ -18,23 +19,24 @@
             android:id="@+id/tvNombrePelicula"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:text="Super O vs Super Bigote Snyder Cut"
             android:textColor="@android:color/white"
             android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnDetalles"
-            android:layout_marginEnd="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnDetalles"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="47dp"
             android:layout_marginEnd="8dp"
-            android:backgroundTint="#4E4A7D"
+            android:backgroundTint="#40000000"
             android:text="Detalles"
             android:textColor="#FFFFFF"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnBorrar"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,10 +44,11 @@
         <Button
             android:id="@+id/btnBorrar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#4E4A7D"
+            android:layout_height="45dp"
+            android:backgroundTint="#40000000"
             android:text="Borrar"
             android:textColor="#FBFBFB"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
