--- a/app/src/main/res/layout/nav_bar.xml
+++ b/app/src/main/res/layout/nav_bar.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,68 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".nav_bar">
 
-
+    <!-- Fondo completo de la barra -->
     <ImageView
         android:id="@+id/fondo_nav_bar"
-        android:layout_width="411dp"
-        android:layout_height="94dp"
-        android:layout_marginTop="637dp"
+        android:layout_width="415dp"
+        android:layout_height="103dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/fondo_nav_bar" />
 
+    <!-- Fondo del botón plus centrado -->
     <ImageView
         android:id="@+id/fondo_boton_plus"
-        android:layout_width="307dp"
-        android:layout_height="104dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="322dp"
+        android:layout_height="113dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="@id/fondo_nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/fondo_nav_bar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/fondo_boton_plus" />
 
-    <ImageButton
-        android:id="@+id/btnCines"
-        android:layout_width="29dp"
-        android:layout_height="39dp"
-        android:background="@android:color/transparent"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="@+id/fondo_nav_bar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnPlus"
-        app:layout_constraintTop_toTopOf="@+id/fondo_nav_bar"
-        app:srcCompat="@drawable/cines" />
+    <!-- Botón grande central -->
 
-    <ImageButton
-        android:id="@+id/btnPeliculas"
-        android:layout_width="29dp"
-        android:layout_height="39dp"
-        android:background="@android:color/transparent"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="@+id/fondo_nav_bar"
-        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
-        app:layout_constraintStart_toStartOf="@+id/fondo_nav_bar"
-        app:layout_constraintTop_toTopOf="@+id/fondo_nav_bar"
-        app:srcCompat="@drawable/peliculas" />
+    <!-- Botón películas a la izquierda -->
+
+    <!-- Botón cines a la derecha -->
 
     <ImageButton
         android:id="@+id/btnPlus"
-        android:layout_width="120dp"
-        android:layout_height="109dp"
-        android:layout_marginTop="596dp"
-        android:scaleType="fitCenter"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/fondo_boton_plus"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/fondo_boton_plus"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@id/fondo_nav_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/boton_plus" />
+
+    <ImageButton
+        android:id="@+id/btnPeliculas"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="24dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@id/fondo_nav_bar"
+        app:layout_constraintEnd_toStartOf="@id/btnPlus"
+        app:layout_constraintHorizontal_bias="0.296"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/peliculas" />
+
+    <ImageButton
+        android:id="@+id/btnCines"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="24dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@id/fondo_nav_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.714"
+        app:layout_constraintStart_toEndOf="@id/btnPlus"
+        app:srcCompat="@drawable/cines" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
