Se han agregado las vistas de administración de tipos, actores, generos, directores y clasificacion

--- a/app/src/main/res/drawable/fondo_creacion.xml
+++ b/app/src/main/res/drawable/fondo_creacion.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- Color con transparencia del 53% -->
-    <solid android:color="#231F4A"/>
+    <solid android:color="#100F1E"/>
 
     <!-- Border radius -->
     <corners android:radius="21dp"/>
