--- a/app/src/main/res/layout/activity_crear_tipo.xml
+++ b/app/src/main/res/layout/activity_crear_tipo.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/crearTipo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,13 +25,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="227dp"
         android:layout_height="232dp"
-        android:layout_marginTop="216dp"
         android:background="@drawable/fondo_creacion"
         android:dividerPadding="8dp"
         android:orientation="vertical"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:showDividers="middle"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -94,7 +93,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
-                android:text="Crear Pelicula"
+                android:text="Crear Tipo"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp" />
         </LinearLayout>
