--- a/app/src/main/res/layout/activity_crear_peliculas.xml
+++ b/app/src/main/res/layout/activity_crear_peliculas.xml
@@ -259,6 +259,7 @@
         </LinearLayout>
     </ScrollView>
 
+
     <include
         android:id="@+id/includeCreacion"
         layout="@layout/deplegable_creacion"
@@ -267,17 +268,22 @@
         android:layout_height="match_parent" />
 
     <include
-        android:id="@+id/navBarInclude"
-        layout="@layout/nav_bar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:id="@+id/AdminTipos"
+        layout="@layout/administrar_tipos"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <include
         android:id="@+id/crearTipo"
         layout="@layout/activity_crear_tipo"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <include
+        android:id="@+id/AdminGeneros"
+        layout="@layout/administrar_generos"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -290,6 +296,13 @@
         android:layout_height="match_parent" />
 
     <include
+        android:id="@+id/AdminDirector"
+        layout="@layout/administrar_directores"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <include
         android:id="@+id/crearDirector"
         layout="@layout/activity_crear_director"
         android:visibility="gone"
@@ -297,8 +310,22 @@
         android:layout_height="match_parent" />
 
     <include
+        android:id="@+id/AdminClasi"
+        layout="@layout/administrar_clasificaciones"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <include
         android:id="@+id/crearClasificacion"
         layout="@layout/activity_crear_clasificacion"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <include
+        android:id="@+id/AdminActores"
+        layout="@layout/administrar_actores"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
